hydro_lang/src/live_collections/stream/snapshots/hydro_lang__live_collections__stream__tests__backtrace_chained_ops.snap
---
source: hydro_lang/src/live_collections/stream/mod.rs
expression: source_meta.backtrace.elements()
---
[
    BacktraceElement {
        fn_name: "hydro_lang::live_collections::stream::tests::backtrace_chained_ops",
        lineno: Some(
            2468,
        ),
        colno: Some(
            14,
        ),
    },
    BacktraceElement {
        fn_name: "hydro_lang::live_collections::stream::tests::backtrace_chained_ops::{{closure}}",
        lineno: Some(
            2462,
        ),
        colno: Some(
            31,
        ),
    },
    BacktraceElement {
        fn_name: "core::ops::function::FnOnce::call_once",
        lineno: Some(
            250,
        ),
        colno: Some(
            5,
        ),
    },
]
